# stocks-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2d8992563b66_add_tz_to_created_at_and_updated_at.py  48c7a587dd55_initial_db_structure.py  7cd868d0f70f_change_amount_to_int.py  eda32b8e18c5_initial_db_structure.py
app/: app_config.py  cache.py  database.py  log_config.py  main.py
app/common/: currency_utils.py  datetime_utils.py
app/models/dto/: daily_open_close_stock.py  stock_endpoint_models.py  stock_response.py
app/models/tables/: __init__.py  base.py  purchases.py
app/repository/: marketwatch_repository.py  open_close_stock_repository.py  purchases_repository.py
app/stocks/: stock_router.py  stock_service.py
app/stocks/repository/: purchases_repository.py  stock.py
docs/: classes_stocks-api.mmd  packages_stocks-api.mmd
stocks_api/: app_config.py  cache.py  database.py  log_config.py  main.py
stocks_api/models/dto/: purchase.py
stocks_api/models/stock/: competitor.py  performance_data.py  stock.py  stock_values.py
stocks_api/models/tables/: __init__.py  base.py  purchases.py
stocks_api/repository/: stock.py
stocks_api/router/: stock.py
stocks_api/service/: stock.py
test/: conftest.py  constants.py  test_log_config.py  test_main.py
test/repository/: test_marketwatch_repository.py  test_open_close_stock_repository.py  test_purchases_repository.py
test/repository/marketwatch_html/: banner_open.html  bot_detected.html  stock_page.html
test/stock/: test_stock_router.py  test_stock_service.py
